latest changes with style

--- a/Coursework/Pages/BarChart.razor
+++ b/Coursework/Pages/BarChart.razor
@@ -1,6 +1,6 @@
 ﻿@page "/barchart"
 @using System.Linq
-
+<h1 class="navbar-brand mb-5 h1">Bar graph</h1>
 <MudChart ChartType="ChartType.Bar" ChartSeries="@Series" XAxisLabels="@XAxisLabels" Width="100%" Height="350px">
     <CustomGraphics>
         <style>
