--- a/Coursework/Pages/InventoryLog.razor
+++ b/Coursework/Pages/InventoryLog.razor
@@ -4,9 +4,7 @@
 @using System.Globalization;
 
 <ul class="nav justify-content-between">
-    <li class="nav-item">
-        <h2>Inventory Log</h2>
-    </li>
+    <h1 class="navbar-brand mb-5 h1">Inventory Log</h1>
     <li class="nav-item ml-auto">
         <div>
             <input type="month" @oninput="ShowLog" />
