--- a/Coursework/Pages/InventoryDetail.razor
+++ b/Coursework/Pages/InventoryDetail.razor
@@ -2,15 +2,7 @@
 
 
 <ul class="nav nav-tabs">
-    <li class="nav-item ">
-        <a class='nav-link btn @(_tabFilter == "All" ? "active" : "")' @onclick='()=>TabFilter("All")'>All</a>
-    </li>
-    <li class="nav-item">
-        <a class='nav-link btn @(_tabFilter == "Due" ? "active" : "")' @onclick='()=>TabFilter("Due")'>Due</a>
-    </li>
-    <li class="nav-item">
-        <a class='nav-link btn @(_tabFilter == "Done" ? "active" : "")' @onclick='()=>TabFilter("Done")'>Done</a>
-    </li>
+    <h1 class="navbar-brand mb-5 h1">Inventory details</h1>
  
 </ul>
 
