--- a/Coursework/Pages/Login.razor.css
+++ b/Coursework/Pages/Login.razor.css
@@ -6,6 +6,7 @@
     padding-bottom: 40px;
     height: calc(100vh - 150px);
 
+
 }
 
 .form-login {
@@ -13,6 +14,8 @@
     max-width: 330px;
     padding: 15px;
     margin: auto;
+    box-shadow: 4px 9px 33px -11px rgba(0,0,0,0.75);
+
 }
 
 .form-login .form-floating:focus-within {
