--- a/Coursework/Pages/Staffs.razor
+++ b/Coursework/Pages/Staffs.razor
@@ -1,9 +1,9 @@
-﻿@page "/users"
+﻿@page "/staffs"
 
 <nav class="navbar navbar-light bg-light justify-content-between">
-    <h1 class="navbar-brand mb-0 h1">Users</h1>
+    <h1 class="navbar-brand mb-5 h1">Staffs</h1>
     <button class="btn btn-primary" type="button" @onclick="OpenAddUserDialog">
-        <span class="oi oi-plus" /> Add
+        <span class="oi oi-plus" /> Add Staff
     </button>
 </nav>
 <table class="table">
