--- a/Coursework/Shared/NavMenu.razor
+++ b/Coursework/Shared/NavMenu.razor
@@ -18,7 +18,7 @@
         @if (UserRole == Role.Admin)
         {
             <div class="nav-item px-3">
-                <NavLink class="nav-link" href="users">
+                <NavLink class="nav-link" href="staffs">
                     <span class="oi oi-person" /> Staffs
                 </NavLink>
             </div>
