--- a/Coursework/Shared/NavMenu.razor
+++ b/Coursework/Shared/NavMenu.razor
@@ -24,23 +24,23 @@
             </div>
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="requests">
-                    <span class="oi oi-person" /> Requests
+                    <span class="oi oi-inbox" /> Requests
                 </NavLink>
             </div>
                         <div class="nav-item px-3">
                 <NavLink class="nav-link" href="inventorylog">
-                    <span class="oi oi-person" /> Inventory Log
+                    <span class="oi oi-spreadsheet" /> Inventory Log
                 </NavLink>
             </div>
                       
                         <div class="nav-item px-3">
                 <NavLink class="nav-link" href="inventorydetail">
-                    <span class="oi oi-person" /> Inventory Detail
+                    <span class="oi oi-book" /> Inventory Detail
                 </NavLink>
             </div>
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="barchart">
-                    <span class="oi oi-person" /> barchart
+                    <span class="oi oi-graph" /> barchart
                 </NavLink>
             </div>
             
